Added 1+lamda, and made populationmodel into a wrapper